add configuration service
