# src/models/responses_additions.go
@@ -19,3 +19,11 @@ func (resp *ReactionsDELETEResponse200) Code() int {
 func (resp *ReactionsDELETEResponse403) Code() int {
 	return 403
 }
+
+func (resp *ConfigurationPOSTResponse200) Code() int {
+	return 200
+}
+
+func (resp *ConfigurationPOSTResponse422) Code() int {
+	return 422
+}
